# grpa

./: .dockerignore  .envexample  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  ref.md  setup.py
.github/workflows/: main.yml
Services/: worker_service.py
api/: main.py  models.py  routes.py  webhook.py
api/database/: models.py  tables.py
api/database_descontinuado/: enums.py  models.py  schemas.py  tables.py
api/middlewares/: nocache.py
api/static/css/: wizard.css
api/static/js/: wizard.js
api/templates/: success.html  wizard.backup.html  wizard.html
automations/dealernet/common/: categorize_products.py  fill_cost_allocation.py  fill_installments.py  fill_invoice_item.py  fill_pre_product_invoice_cover.py  fill_product_invoice_cover.py  fill_service_invoice_cover.py  import_xml.py  login.py  select_invoice.py  select_xml.py  switch_filial.py  validate_supplier.py
automations/dealernet/data/: cadastrar_nf_produto.json  cadastrar_nf_servico.json
automations/dealernet/use_cases/: cadastrar_nf_produto.py  cadastrar_nf_servico.py  cadastro_nf_produto.py  cadastro_nf_servico.py  validar_fornecedor.py
automations/solutionerp/common/: login.py
automations/solutionerp/data/: echo.json
automations/system/common/: login.py  validate_supplier.py
automations/system/data/: validar_fornecedor.json
automations/system/use_cases/: echo.py  validar_fornecedor.py
core/: api.py  artifact_manager.py  automation.py  browser_automation.py  database.py  logger.py  migrations.py  updater.py  worker.py
database/migrations/: tables.sql
docs/: Dockerfile  docusaurus.config.ts  package-lock.json
docs/docs/: intro.md
docs/docs/automations/: how-to-create.md
docs/docs/core/: api.md  browser-automation.md  maintenance.md  worker.md
modules/utils/: app.py  desktop_automation.py  general.py  models.py
scripts/: README.md  install.ps1  install.sh
(+15 files in other folders)
