[project]
name = "grpa"
version = "2.0.0"
description = "GRPA é uma ferramenta de automação integrada com o software GOEVO"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
[tool.uv.scripts]
start = "python -c 'from main import Main; Main().run()'"
test  = "python -c 'from main import Main; Main().test()'"
setup = "python -c 'import setup; setup.start()'"