[project]
name = "grpa"
version = "2.0.0"
description = "GRPA é uma ferramenta de automação integrada com o software GOEVO"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.27",
    "requests>=2.32.5",
    "uvicorn>=0.46.0",
]
[tool.poe.tasks]

[tool.poe.tasks.start]
script = "main:start"

[tool.poe.tasks.test]
script = "main:test"

[tool.poe.tasks.setup]
script = "setup:start"

[dependency-groups]
dev = [
    "poe>=0.1.0",
    "poethepoet>=0.44.0",
]
